# rogue-net-rs

./: .gitignore  Cargo.toml  README.md  main.rs
.github/workflows/: test.yml
checkpoints/latest-step000000024576/: config.ron  state.optimizer.msgpack  state.ron
integration-test/: Cargo.toml  Makefile  pyproject.toml  test.py
integration-test/src/: lib.rs
norelpos/latest-step000000024576/: state.agent.msgpack  state.optimizer.msgpack
src/: categorical_action_head.rs  config.rs  embedding.rs  fun.rs  layer_norm.rs  lib.rs  linear.rs  main.rs  msgpack.rs  relpos_encoding.rs  rogue_net.rs  state.rs  tests.rs  transformer.rs
test-data/: simple.roguenet
test-data/interpolated-vgated-polar-relpos/: config.ron  state.agent.msgpack  state.ron
test-data/pve-relpos-16m/: config.ron  state.agent.msgpack  state.optimizer.msgpack
test-data/pve-translate-16m/: config.ron  state.agent.msgpack  state.optimizer.msgpack  state.ron
test-data/relpos-encoding/: state.agent.msgpack
test-data/simple/: config.ron  state.ron
