[package]
name = "rogue_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
indexmap = "1.9.1"
log = "0.4.17"
ndarray = { version = "0.15.4", features = ["approx"] }
rand = "0.8.5"
rmpv = "1.0.0"
statrs = "0.15.0"

[[bin]]
name = "rogue_net"
path = "src/bin/main.rs"
