[package]
name = "rogue-net"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pure Rust implementation of the RogueNet neural network"
readme = "README.md"
repository = "https://github.com/entity-neural-network/rogue-net-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
indexmap = { version = "1.9.1", features = ["serde"] }
log = "0.4.17"
ndarray = { version = "0.15.4", features = ["approx"] }
rand = "0.8.5"
rmpv = "1.0.0"
statrs = "0.15.0"
ron = "0.7"
serde = { version = "1", features = ["derive"] }
clap = { version = "3.2", features = ["derive"] }
tar = "0.4"

[[bin]]
name = "rogue-net"
path = "src/bin/main.rs"