[tool.poetry]
name = "rogue-net-rs"
version = "0.1.0"
description = ""
authors = ["Clemens Winter <clemenswinter1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
rogue-net = "^0.1.7"
enn-trainer = "^0.1.11"
torch = "^1.12.1"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
maturin = "^0.13.5"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
